--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@cometa/react-native-aes-encryptor",
+    "name": "@cometa-tec-br/react-native-aes-encryptor"
     "version": "1.0.0",
     "publishConfig": {
       "access": "public"
